<resources>
    <string name="app_name">Nimble Surveys</string>
    <string name="confirm_exit_survey_cancel">Cancel</string>
    <string name="confirm_exit_survey_message">Are you sure you want to quit the survey?</string>
    <string name="confirm_exit_survey_title">Warning!</string>
    <string name="confirm_exit_survey_yes">Yes</string>
    <string name="forget_password_reset_password_instruction">Enter your email to receive instructions for resetting your password.</string>
    <string name="forget_password_reset_btn_title">Reset</string>
    <string name="general_get_current_user_info_error">Getting current user info error. Please try again</string>
    <string name="general_get_survey_details_error">Getting survey details failed. Please try again</string>
    <string name="general_get_surveys_error">Getting surveys failed. Please try again</string>
    <string name="general_no_more_surveys_error">No more surveys to load</string>
    <string name="general_no_question_error">No question from server</string>
    <string name="general_delete_local_surveys_error">Cleaning local surveys data failed. Please try again</string>
    <string name="general_login_error">Login failed. Please try again</string>
    <string name="general_logout_error">Logout failed. Please try again</string>
    <string name="general_refresh_token_error">Refreshing token failed. Please try again</string>
    <string name="general_session_expired_error">Session expired</string>
    <string name="general_submit_survey_responses_error">Submit survey responses failed. Please try again</string>
    <string name="general_test_error">Test error</string>
    <string name="general_unknown_error">Unknown error</string>
    <string name="menu_drawer_logout">Logout</string>
    <string name="sign_in_log_in_btn_title">Log in</string>
    <string name="sign_in_email_hint">Email</string>
    <string name="sign_in_password_hint">Password</string>
    <string name="sign_in_forgot_button_title">Forgot?</string>
    <string name="submit_survey_responses_success_message">Thanks for taking the survey.</string>
    <string name="survey_details_start_survey">Start Survey</string>
    <string name="survey_questions_submit">Submit</string>
    <string name="survey_questions_text_area_hint">Hint</string>
    <string name="survey_questions_text_field_hint">Hint</string>
    <string name="surveys_menu_drawer_default_user_name">Nimble User</string>
    <string name="surveys_today">Today</string>
</resources>
